# tr-ai-card-radar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: add-resource-card-audit.yml
docs/: BOUNDARY.md  REAL_DEMO.md  RELEASE_CHECKLIST.md
examples/: resources.yaml
examples/local_cards/: dataset_card_minimal.md  model_card_minimal.md
examples/real_reports/asafaya-kanarya-750m/: command_output.txt  report.json  report.md  reuse_warnings.tsv
examples/real_reports/trendyol-llm-7b-chat-v1.0/: command_output.txt  report.json  report.md  reuse_warnings.tsv
examples/real_reports/ytu-ce-cosmos-turkish-gpt2/: command_output.txt  report.json  report.md  reuse_warnings.tsv
schemas/: report.schema.json  resources.schema.json
src/tr_ai_card_radar/: __init__.py  checks.py  cli.py  hf_client.py  models.py  reporting.py
tests/: test_checks.py  test_reporting.py
